[package]
description = "nrsc wallet basic rust implmentation"
name = "nrsc_object_base"
version = "0.1.0"
authors = ["NRSC<nrsc@nrsc.cc>"]
license = "MIT"

[dependencies]
rand = "0.6"
sha2 = "0.8"
base64 = "0.10"
failure = "0.1"
lazy_static = "1"
serde = "1"
serde_derive = "1"
base32 = "0.4"
bit-vec = "0.5"
ripemd160 = "0.8"

[dev-dependencies]
serde_json = "1"
