[package]
name = "tests"
version = "0.1.0"
authors = ["NRSC<nrsc@nrsc.cc>"]
edition = "2018"

[lib]
name = "tests"
path = "src/lib.rs"

[[bin]]
name = "test_case"
path = "src/bin.rs"

[dependencies]
nrsc = { path = ".."}
nrsc_wallet_base = { path = "../wallet_base" }
nrsc_object_base = { path = "../object_base" }
clap = {version = "2", features = ["yaml"]}

may = "0.3"
log = "0.4"
rand = "0.6"
chrono = "0.4"
failure = "0.1"
hashbrown = "0.1"
env_logger = "0.6"
lazy_static = "1"

serde = "1"
serde_json = "1"
serde_derive = "1"
